<resources>
    <string name="app_name">JetPackNavigationComponent</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_details">Details</string>
    <string name="title_gallery_details">Gallery Details</string>
</resources>