<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.thecode.navcomponent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_galleryFragment_to_galleryDetailsFragment"
            app:destination="@id/navigation_gallery_details" />
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/navigation_notifications"
            app:popUpTo="@id/navigation_home"
            app:popUpToSaveState="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.thecode.navcomponent.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_dashboardDetailsFragment"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.thecode.navcomponent.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.thecode.navcomponent.ui.dashboard.dashboarddetails.DashboardDetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_dashboard_details">
        <argument
            android:name="itemId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.thecode.navcomponent.ui.home.gallery.GalleryFragment"
        android:label="fragment_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_gallery_details"
        android:name="com.thecode.navcomponent.ui.home.gallery.gallerydetails.GalleryDetailsFragment"
        android:label="@string/title_gallery_details"
        tools:layout="@layout/fragment_gallery_details">
        <argument
            android:name="albumId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_gallery_details_to_galleryDialogFragment"
            app:destination="@id/galleryDialogFragment" />
    </fragment>

    <dialog
        android:id="@+id/galleryDialogFragment"
        android:name="com.thecode.navcomponent.ui.home.gallery.gallerydetails.GalleryDialogFragment"
        android:label="fragment_gallery_dialog"
        tools:layout="@layout/fragment_gallery_dialog">
        <action
            android:id="@+id/action_galleryDialogFragment_to_galleryDialog2Fragment"
            app:destination="@id/galleryDialog2Fragment" />
    </dialog>

    <dialog
        android:id="@+id/galleryDialog2Fragment"
        android:name="com.thecode.navcomponent.ui.home.gallery.gallerydetails.GalleryDialog2Fragment"
        android:label="GalleryDialog2Fragment"
        tools:layout="@layout/fragment_gallery_dialog"/>

</navigation>